# newtua-formats

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
crates/newtua-alz/: Cargo.toml  README.md
crates/newtua-alz/src/: lib.rs
crates/newtua-alz/tests/: alz_oracle.rs
crates/newtua-amiga/: Cargo.toml  README.md
crates/newtua-amiga/src/: lib.rs  lzx.rs
crates/newtua-amiga/tests/: lzx_oracle.rs
crates/newtua-common/: Cargo.toml  README.md
crates/newtua-common/src/: bitreader.rs  crc32.rs  deflate.rs  lib.rs  lzss.rs  lzw.rs  prefixcode.rs  rle90.rs  zipcrypt.rs
crates/newtua-common/tests/: zipcrypt_oracle.rs
crates/newtua-dos/: Cargo.toml  README.md
crates/newtua-dos/src/: arc.rs  arj.rs  crunch.rs  crunch_cpm.rs  lbr.rs  lib.rs  zoo.rs
crates/newtua-dos/tests/: arc_oracle.rs  arj_oracle.rs  crunch_lzhuf_oracle.rs  crunch_oracle.rs  lbr_oracle.rs  zoo_oracle.rs
crates/newtua-dos/tests/fixtures/: crunch.arc  multi.arc
crates/newtua-mac/: Cargo.toml  README.md
crates/newtua-mac/src/: compactpro.rs  des.rs  lib.rs  packit.rs  stuffit_huffman.rs
crates/newtua-mac/tests/: compactpro_oracle.rs  packit_oracle.rs
crates/newtua-nsis/: Cargo.toml  README.md
crates/newtua-stuffit/: Cargo.toml  README.md
crates/newtua-stuffit/src/: lib.rs
crates/newtua-stuffit/src/sitx/: blend.rs  brimstone.rs  bwt.rs  cyanide.rs  darkhorse.rs  iron.rs  mod.rs  p2.rs  rangecoder.rs  x86.rs
crates/newtua-stuffit/src/sitx/ppmd/: alloc.rs  context.rs  encoder_mirror.rs  mod.rs  rangecoder.rs  variant_g.rs
crates/newtua-stuffit/tests/: sitx_oracle.rs
crates/newtua-testutil/src/: lib.rs
crates/xad-common/src/: lib.rs  rle90.rs
crates/xad-dos/src/: lib.rs  squeeze.rs
crates/xad-dos/tests/: squeeze_oracle.rs
