[package]
name = "newtua-stuffit"
version = "0.1.1"
description = "Decoders for the StuffIt family of classic Macintosh archives (classic .sit, StuffIt 5, and StuffItX)."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
english-dict = []

[dependencies]
newtua-common.workspace = true

[dev-dependencies]
newtua-testutil.workspace = true
